updated some content
updated some content by AM

--- a/index.html
+++ b/index.html
@@ -876,8 +876,8 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Agile DevSecOps & Platform Engineering
-                                Automations</h1>
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal Powered (powered by DevSecOps & Platform Engineering
+                                Automations)</h1>
                             <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Self-service
                                 portal provides Agile DevSecOps & Platform Engineering Eco System for faster software
                                 delivery through Agile Project Management, Readymade CICD Pipelines, Environment
@@ -1036,27 +1036,26 @@
                                         <ul class="list-unstyled d-flex flex-wrap flex-column  mt-4" data-aos="fade-up"
                                             data-aos-delay="50">
                                             <li class="py-1">
-                                                <i class="fas fa-times-circle me-2 text-danger"></i>Maintain 3 teams and
+                                                <i class="fas fa-times-circle me-2 text-danger"></i>Maintain 3 teams (Development, DevOps, Cloud Infra) and
                                                 pool of
                                                 Engineers
                                             </li>
 
                                             <li class="py-1">
                                                 <i class="fas  fa-times-circle me-2 text-danger"></i>
-                                                Multiple consoles for monitoring servers/jobs/quality check reports
+                                                Multiple tools/products/consoles for managing cloud / Infra, CICD, agile PM, repository
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-times-circle me-2 text-danger"></i>
-                                                Additional overhead for Scrum master for managing multiple teams
+                                                Additional overhead for Engineering manager / SDM / TPM for managing multiple teams
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas  fa-times-circle me-2 text-danger"></i>
-                                                Dependency for deployment automations completion (may take a lot of
-                                                time)
+                                                High Dependency with CICD & Infra teams (that slowdown development turnaround time)
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-times-circle me-2 text-danger"></i>
-                                                Duplicate environments
+                                                Duplication of Integration environments (every project create new Integration environments)
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-times-circle me-2 text-danger"></i>
@@ -1078,32 +1077,33 @@
                                             data-aos-delay="50">
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Lean team is sufficient
+                                                Lean DevOps / Infra team is sufficient
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-check-circle me-2"></i>
+                                                Developer Self Service Portal enables developer to quickly promote code or create CICD / project environments
                                             </li>
 
                                             <li class="py-1">
                                                 <i class="fas  fa-check-circle me-2"></i>
-                                                Single unified console for monitoring servers/jobs/quality check reports
+                                                Single unified console for managing cloud / Infra, CICD, agile PM, repository
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Scrum master manages only development team
+                                                Engineering manager / SDM / TPM manages only development team
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas  fa-check-circle me-2"></i>
-                                                Dependency with Devozy for CICD/Infra make things easier
+                                                Readymade automations make things easier to spinup Project environment / CICD pipes
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Reuse of environments
+                                                Reuse of environments using Containerization 
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
                                                 Easy to troubleshoot issues
                                             </li>
-
-
-
                                         </ul>
                                     </div>
                                 </div>
