home page changes
commit by AM

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal Powered (powered by DevSecOps & Platform Engineering
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (powered by DevSecOps & Platform Engineering
                                 Automations)</h1>
                             <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Self-service
                                 portal provides Agile DevSecOps & Platform Engineering Eco System for faster software
