--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="twitter:site" content="@devozy">
     <meta name="twitter:creator" content="@devozy">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Devozy | Agile DevSecOps & Platform Engineering for Rapid Software Delivery">
+    <meta name="twitter:title" content="Devozy.ai | Developer Self service portal (IDP) with Agile DevSecOps, IaC & Platform Engineering Capabilities for Rapid Software Delivery">
     <meta name="twitter:description"
-        content="Devozy - Enterprise Agile DevSecOps platform that empowers IT engineering team and developers to accelerate the overall return on software development through faster software delivery">
+        content="Devozy.ai - Self service portal (IDP) powered with DevSecOps & Platform Engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
     <meta name="twitter:image" content="#">
 
     <!--facebook og-->
     <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Devozy | Agile DevSecOps & Platform Engineering for Rapid Software Delivery">
+    <meta name="twitter:title" content="Devozy.ai | Developer Self service portal (IDP) with Agile DevSecOps, IaC & Platform Engineering Capabilities for Rapid Software Delivery">
     <meta property="og:description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+        content="Devozy.ai - Self service portal (IDP) powered with DevSecOps & Platform Engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
     <meta property="og:image" content="#">
     <meta property="og:image:secure_url" content="#">
     <meta property="og:image:type" content="image/png">
@@ -27,14 +27,14 @@
     <meta property="og:image:height" content="600">
     <!--meta-->
     <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+        content="Devozy.ai - Self service portal (IDP) powered with DevSecOps & Platform Engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
     <link rel="icon" href="assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Devozy | Agile DevSecOps & Platform Engineering for Rapid Software Delivery</title>
+    <title>Devozy.ai | Developer Self service portal (IDP) with Agile DevSecOps, IaC & Platform Engineering Capabilities for Rapid Software Delivery</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -856,8 +856,7 @@
                 </li> -->
                     </ul>
                     <div class="action-btns mt-4 ps-3">
-                        <a href="https://web.devozy.ai/" target="_blank" class="btn btn-outline-primary me-2">Sign
-                            In</a>
+                        <a href="https://web.devozy.ai/" target="_blank" class="btn btn-outline-primary me-2">Product Login</a>
                         <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Demo</a>
                     </div>
                 </div>
@@ -876,7 +875,7 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (powered by DevSecOps & Platform Engineering
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (powered with DevSecOps & Platform Engineering
                                 Automations)</h1>
                             <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Self-service
                                 portal provides Agile DevSecOps & Platform Engineering Eco System for faster software
@@ -2988,7 +2987,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2021-2023 YozY Technologies (Registered
+                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2022-2025 YozY Technologies (Registered
                                     under Govt. of India: AAT-9623)</p>
                             </div>
                         </div>
