--- a/request-demo.html
+++ b/request-demo.html
@@ -507,10 +507,11 @@
         <section class="sign-up-in-section bg-dark ptb-120"
             style="background: url('assets/img/page-header-bg.svg')no-repeat bottom right">
             <div class="container">
-                <div class="row align-items-start justify-content-between">
-                    <div class="col-xl-5 col-lg-5 col-md-12 order-1 order-lg-0">
-                        <div class="testimonial-tab-slider-wrap mt-5 ins-title ">
-                            <h1 class="fw-bold text-dark display-5">Experience the <mark>Devozy.ai</mark> Platform<mark> Request</mark> Demo!!</h1>
+                <div class="row justify-content-center text-center">
+                    <div class="col-xl-8 col-lg-10 mb-5">
+                        <div class="hero-content-wrap">
+                            <h1 class="fw-bold text-dark display-5"> Experience the all new world class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (powered with DevSecOps & Platform Engineering
+                                Automations)</h1>
                             <p>Unlock the power of innovation - The modern software delivery platform & Developer Experience Unleashed. Witness how our
                                 technology can transform your business. Request a personalized demo now and embark on a
                                 journey to redefine possibilities.</p>
@@ -530,13 +531,13 @@
                                     <div class="col-sm-12">
                                         <div class="input-group mb-3">
                                             <input type="text" id="name" name="name" class="form-control"
-                                                placeholder="Name" aria-label="name" required>
+                                                placeholder="Full Name" aria-label="name" required>
                                         </div>
                                     </div>
                                     <div class="col-sm-12 ">
                                         <div class="input-group mb-3">
                                             <input type="email" id="email" name="email" class="form-control"
-                                                placeholder="Email" aria-label="email" required>
+                                                placeholder="Official Email" aria-label="email" required>
                                         </div>
                                     </div>
                                     <!-- <div class="col-sm-6">
@@ -552,14 +553,14 @@
                                     <div class="col-sm-12">
                                         <div class="input-group mb-3">
                                             <input type="text" id="number" name="number" class="form-control"
-                                                placeholder="phone number" aria-label="phone number" required>
+                                                placeholder="Phone Number" aria-label="phone number" required>
                                         </div>
                                     </div>
 
                                     <div class="col-12">
                                         <div class="input-group mb-3">
                                             <input type="text" id="companyname" name="companyname" class="form-control"
-                                                placeholder="companyname" aria-label="companyname" required>
+                                                placeholder="Company Name" aria-label="companyname" required>
                                         </div>
                                     </div>
 
@@ -586,7 +587,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2021-2023 YozY Technologies LLP (Registered
+                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2022-2025 YozY Technologies LLP (Registered
                                     under Govt. of India: AAT-9623)</p>
                             </div>
                         </div>
