--- a/index.html
+++ b/index.html
@@ -622,8 +622,8 @@
                             <div class="tt-theme-dark" data-bs-toggle="tooltip" data-bs-placement="left"
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
                         </a> <a href="https://web.devozy.ai/" target="_blank"
-                            class="btn btn-link text-decoration-none me-2">Sign In</a>
-                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Request Demo</a>
+                            class="btn btn-link text-decoration-none me-2">Login</a>
+                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Get Devozy Free</a>
                     </div>
                 </div>
             </nav>
@@ -856,8 +856,8 @@
                 </li> -->
                     </ul>
                     <div class="action-btns mt-4 ps-3">
-                        <a href="https://web.devozy.ai/" target="_blank" class="btn btn-outline-primary me-2">Product Login</a>
-                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Demo</a>
+                        <a href="https://web.devozy.ai/" target="_blank" class="btn btn-outline-primary me-2">Login</a>
+                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Free Demo</a>
                     </div>
                 </div>
             </div>
@@ -2385,8 +2385,7 @@
 
                                                 </ul>
                                             </div>
-                                            <a href="request-demo.html" class="btn btn-outline-primary mt-2">Start Free
-                                                Trial</a>
+                                            <a href="request-demo.html" class="btn btn-outline-primary mt-2">Get Devozy Free</a>
 
                                             <!--pattern start-->
                                             <div class="dot-shape-bg position-absolute z--1 left--40 bottom--40">
@@ -2863,7 +2862,7 @@
                                 <p> Experience the power of DEVOZY's expertise today.</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5" data-aos="fade-up" data-aos-delay="50">
-                                <a href="request-demo.html" class="btn btn-primary">Request Demo</a>
+                                <a href="request-demo.html" class="btn btn-primary">Request Free Demo</a>
                                 <!-- <a href="http://www.youtube.com/watch?v=hAP2QF--2Dg" class="text-decoration-none popup-youtube d-inline-flex align-items-center watch-now-btn ms-lg-3 ms-md-3 mt-3 mt-lg-0"> <i
                                         class="fas fa-play"></i> Watch Demo </a> -->
                             </div>
