--- a/request-demo.html
+++ b/request-demo.html
@@ -35,7 +35,7 @@
     <link rel="icon" href="assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Request Demo - devozy</title>
+    <title>Request Free Demo - devozy</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -441,7 +441,7 @@
                             <div class="tt-theme-dark" data-bs-toggle="tooltip" data-bs-placement="left"
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
                         </a> <a href="https://web.devozy.ai/login" target="_blank"
-                            class="btn btn-link text-decoration-none me-2">Sign In</a>
+                            class="btn btn-link text-decoration-none me-2">Login</a>
                         <a href="request-demo.html" class="btn btn-primary" target="_blank">Get Started</a>
                     </div>
                 </div>
@@ -496,7 +496,7 @@
                     <div class="action-btns mt-4 ps-3">
                         <a href="https://web.devozy.ai/login" target="_blank" class="btn btn-outline-primary me-2">Sign
                             In</a>
-                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Demo</a>
+                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Free Demo</a>
                     </div>
                 </div>
             </div>
