--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-    <!-- Google Tag Manager -->
+    <!-- Google Tag Manager 
     <script>
         (function (w, d, s, l, i) {
             w[l] = w[l] || [];
@@ -62,7 +62,18 @@
                 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'G-GJ5SBGF06Q');
-    </script>
+    </script>-->
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ5SBGF06Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GJ5SBGF06Q');
+</script>
+
     <!-- End Google Tag Manager -->
 
     <!-- internalcss -->
