--- a/index.html
+++ b/index.html
@@ -2394,8 +2394,8 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2022-2025 YozY Technologies (Registered
-                                    under Govt. of India: AAT-9623)</p>
+                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2025 YozY Techlabs Pvt Ltd (Registered
+                                    under Govt. of India)</p>
                             </div>
                         </div>
                         <div class="col-md-4 col-lg-4">
