--- a/request-demo.html
+++ b/request-demo.html
@@ -2,6 +2,13 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
+    <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
+    <!-- End Google Tag Manager -->
     <!--required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -248,8 +255,8 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2022-2025 YozY Technologies LLP (Registered
-                                    under Govt. of India: AAT-9623)</p>
+                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2025 YozY Techlabs Pvt Ltd (Registered
+                                    under Govt. of India)</p>
                             </div>
                         </div>
                         <div class="col-md-4 col-lg-4">
