--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (powered with DevSecOps & Platform Engineering
-                                Automations)</h1>
-                            <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Self-service
-                                portal provides Agile DevSecOps & Platform Engineering Eco System for faster software
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (IDP) powered with Platform Engineering
+                                Automations</h1>
+                            <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: A Self-service
+                                portal provides Platform Engineering Eco System for faster software
                                 delivery through Agile Project Management, Readymade CICD Pipelines, Environment
                                 provisioning in multi-cloud & IaC capabilities</p>
                             <div class="action-btns text-center pt-4" data-aos="fade-up" data-aos-delay="100">
@@ -636,7 +636,7 @@
                 <div class="row justify-content-center align-content-center">
                     <div class="col-md-10 col-lg-8">
                         <div class="section-heading text-center mb-4">
-                            <h2>Developer Self-service Portal: Cutting-edge AI Features with Connected View</h2>
+                            <h2>Developer Self-service Portal (IDP): Cutting-edge AI Features with Connected View platform</h2>
                             <p align="justify">Developers and IT Engineering team can elevate IT software delivery
                                 through Agile Project Management features such as Kanban board,
                                 stories, tasks, sprints and project reports. DevSecOps ensures readymade IaC & CICD
@@ -1672,7 +1672,7 @@
                         <div class="app-two-feature-two-right">
                             <div class="feature-content-wrap">
                                 <!-- <span class="h6 warning-bg-gradient p-1 text-white rounded">update</span> -->
-                                <h2> Revolutionary Mobile DevSecOps Solutions Await</h2>
+                                <h2> Revolutionary IDP / Platform Engineering mobile apps</h2>
                                 <p>
                                     One-Stop Access: CICD Jobs, Quality Reports, and More!
                                     From deployments to tracking your all-in-one solution.
@@ -1749,7 +1749,7 @@
                     <div class="text-center">
                         <ul
                             class="nav nav-tabs text-center border-0 d-inline-flex bg-white rounded overflow-hidden p-0">
-                            <li><a href="#monthly" class="active" data-bs-toggle="tab">Plans</a></li>
+                            <li><a href="#monthly" class="active" data-bs-toggle="tab">Business Plans</a></li>
                             <li><a href="#yearly" data-bs-toggle="tab">Enterprise plan</a></li>
                         </ul>
                     </div>
@@ -1762,7 +1762,7 @@
                                         <div
                                             class="position-relative single-pricing-wrap rounded-custom bg-white custom-shadow p-5 mb-4 mb-lg-0">
                                             <div class="pricing-header mb-32">
-                                                <h3 class="package-name text-primary d-block">Basic </h3>
+                                                <h3 class="package-name text-primary d-block">Business Basic </h3>
                                                 <h4 class="display-6 fw-semi-bold">$99<span>/month**</span></h4>
                                                 <span>Free For 30 Days</span>
 
@@ -1806,7 +1806,7 @@
                                         <div
                                             class="position-relative single-pricing-wrap rounded-custom bg-dark text-white p-5 mb-4 mb-lg-0">
                                             <div class="pricing-header mb-32">
-                                                <h3 class="package-name text-warning d-block">Standard </h3>
+                                                <h3 class="package-name text-warning d-block">Business Standard</h3>
                                                 <h4 class="display-6 fw-semi-bold">$299<span>/month**</span></h4>
                                             </div>
                                             <div class="pricing-info mb-4">
@@ -1846,7 +1846,7 @@
                                         <div
                                             class="position-relative single-pricing-wrap rounded-custom bg-white custom-shadow p-5 mb-4 mb-lg-0">
                                             <div class="pricing-header mb-32">
-                                                <h3 class="package-name text-primary d-block">Plus</h3>
+                                                <h3 class="package-name text-primary d-block">Business Plus</h3>
                                                 <h4 class="display-6 fw-semi-bold">$999<span>/month**</span></h4>
                                             </div>
                                             <div class="pricing-info mb-4">
