--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <meta name="twitter:site" content="@devozy">
     <meta name="twitter:creator" content="@devozy">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Devozy.ai | Developer Self service portal (IDP) with Agile DevSecOps, IaC & Platform Engineering Capabilities for Rapid Software Delivery">
+    <meta name="twitter:title" content="Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.">
     <meta name="twitter:description"
-        content="Devozy.ai - Self service portal (IDP) powered with DevSecOps & Platform Engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta name="twitter:image" content="#">
 
     <!--facebook og-->
     <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Devozy.ai | Developer Self service portal (IDP) with Agile DevSecOps, IaC & Platform Engineering Capabilities for Rapid Software Delivery">
+    <meta name="twitter:title" content="Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.">
     <meta property="og:description"
-        content="Devozy.ai - Self service portal (IDP) powered with DevSecOps & Platform Engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta property="og:image" content="#">
     <meta property="og:image:secure_url" content="#">
     <meta property="og:image:type" content="image/png">
@@ -34,14 +34,14 @@
     <meta property="og:image:height" content="600">
     <!--meta-->
     <meta name="description"
-        content="Devozy.ai - Self service portal (IDP) powered with DevSecOps & Platform Engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
     <link rel="icon" href="assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Devozy.ai | Developer Self service portal (IDP) with Agile DevSecOps, IaC & Platform Engineering Capabilities for Rapid Software Delivery</title>
+    <title>Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -382,12 +382,9 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (IDP) powered with Platform Engineering
-                                Automations</h1>
-                            <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: A Self-service
-                                portal provides Platform Engineering Eco System for faster software
-                                delivery through Agile Project Management, Readymade CICD Pipelines, Environment
-                                provisioning in multi-cloud & IaC capabilities</p>
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (IDP) for instant software delivery / code deployment to multi-cloud environments from day one!</h1>
+                            <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Effortlessly transform the software delivery / code deployment process with our self-service Platform Engineering / IDP solution.
+                               With seamless integrations, provision a cloud infra, build & deployment automations, rollback, scaling, monitoring, and security, improving productivity (5x) and reducing costs (10x).</p>
                             <div class="action-btns text-center pt-4" data-aos="fade-up" data-aos-delay="100">
                                 <a class="btn btn-primary mt-3 mt-lg-0 mt-md-0 " href="request-demo.html">Request
                                     Free demo</a>
@@ -526,7 +523,7 @@
                             <div class=" row feature-img-content ">
                                 <div class="col-lg-6 col-12 order-1">
                                     <div class="section-heading mb-2" data-aos="fade-up">
-                                        <h2> Challenges with manual DevOps</h2>
+                                        <h2> Challenges with traditional DevOps</h2>
 
                                     </div>
                                     <div class="app-two-feature-two-content">
