--- a/index.html
+++ b/index.html
@@ -2006,7 +2006,7 @@
                                             <img src="assets/img/testimonial/quotes-dot.svg" alt="quotes" width="100"
                                                 class="img-fluid position-absolute left-0 top-0 z--1 p-3">
                                             <div class="d-flex mb-32 align-items-center">
-                                                <img src="people/2.png" class="img-fluid me-3 rounded" width="60"
+                                                <img src="people/male.png" class="img-fluid me-3 rounded" width="60"
                                                     alt="user">
                                                 <div class="author-info">
                                                     <h6 class="mb-0">Vishnu Prasad</h6>
@@ -2047,10 +2047,10 @@
                                             <img src="assets/img/testimonial/quotes-dot.svg" alt="quotes" width="100"
                                                 class="img-fluid position-absolute left-0 top-0 z--1 p-3">
                                             <div class="d-flex mb-32 align-items-center">
-                                                <img src="people/1.png" class="img-fluid me-3 rounded" width="60"
+                                                <img src="people/female.png" class="img-fluid me-3 rounded" width="60"
                                                     alt="user">
                                                 <div class="author-info">
-                                                    <h6 class="mb-0">anonymous</h6>
+                                                    <h6 class="mb-0">Ragini</h6>
                                                     <!-- <small>CEO at Herbs</small> -->
                                                 </div>
                                             </div>
@@ -2084,10 +2084,10 @@
                                             <img src="assets/img/testimonial/quotes-dot.svg" alt="quotes" width="100"
                                                 class="img-fluid position-absolute left-0 top-0 z--1 p-3">
                                             <div class="d-flex mb-32 align-items-center">
-                                                <img src="people/3.png" class="img-fluid me-3 rounded" width="60"
+                                                <img src="people/male.png" class="img-fluid me-3 rounded" width="60"
                                                     alt="user">
                                                 <div class="author-info">
-                                                    <h6 class="mb-0">anonymous</h6>
+                                                    <h6 class="mb-0">Sathish</h6>
                                                     <!-- <small>Founder and CEO</small> -->
                                                 </div>
                                             </div>
