--- a/request-demo.html
+++ b/request-demo.html
@@ -312,7 +312,8 @@
                                         </div>
                                     </div>
 
-                                    <div class="g-recaptcha" data-sitekey="6LdGCJcpAAAAADM_if5CYA2oB7FgXYZIaVt8ig6k"></div>
+                                    <!--<div class="g-recaptcha" data-sitekey="6LdGCJcpAAAAADM_if5CYA2oB7FgXYZIaVt8ig6k"></div>-->
+                                    <div class="g-recaptcha" data-sitekey="6Lfz69EpAAAAAO56RkEaNlt_dLEx1MR28nTi3-zQ"></div>
                                     <div class="col-12">
                                         <button onclick="go(event)" type="submit"
                                             class="btn btn-primary mt-4 d-block w-100">Get Started
