--- a/request-demo.html
+++ b/request-demo.html
@@ -210,8 +210,7 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold text-dark display-5"> Experience the all new world class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (powered with DevSecOps & Platform Engineering
-                                Automations)</h1>
+                            <h1 class="fw-bold text-dark display-5"> Experience the all new world class <span class="text-primary">AI Assisted</span> Developer Self Service Platform (IDP) - an Platform Engineering Solution</h1>
                             <p>Unlock the power of innovation - The modern software delivery platform & Developer Experience Unleashed. Witness how our
                                 technology can transform your business. Request a personalized demo now and embark on a
                                 journey to redefine possibilities.</p>
