--- a/request-demo.html
+++ b/request-demo.html
@@ -312,7 +312,7 @@
                                     </div>
 
                                     <!--<div class="g-recaptcha" data-sitekey="6LdGCJcpAAAAADM_if5CYA2oB7FgXYZIaVt8ig6k"></div>-->
-                                    <div class="g-recaptcha" data-sitekey="6Lfz69EpAAAAAO56RkEaNlt_dLEx1MR28nTi3-zQ"></div>
+                                    <div class="g-recaptcha" data-sitekey="6LfSD2MqAAAAALEqUAkqDns42LCDBYeiNSwt70jm"></div>
                                     <div class="col-12">
                                         <button onclick="go(event)" type="submit"
                                             class="btn btn-primary mt-4 d-block w-100">Get Started
@@ -335,7 +335,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2025 YozY Techlabs Pvt Ltd (Registered
+                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2024-2026 YozY Techlabs Pvt Ltd (Registered
                                     under Govt. of India)</p>
                             </div>
                         </div>
